@startuml Sistema de Aluguel de Carros

interface Usuario{
    -nome: String
    -login: String
    -senha: String
    +gets(): String
    +sets(): void
    +CRUD()
}

class Cliente implements Usuario {
    +Cliente(nome, login, senha)
    +Cliente()
    -RG: String
    -CPF: String
    -endereco: String
    -profissao: String
    -empresa: String
    -salarios: String[3]
}


class Aluguel {
    +Aluguel(data, status, contrato)
    +Aluguel()
    -id: int
    -data: Date
    -status: String
    -contrato : Contrato

    +CRUD()
}

class Agente implements Usuario{
   +Agente(nome, login, senha)
   +Agente()
}

class Automovel {
    +Automovel(matricula, ano, marca, modelo, placa)
    +Automovel()
    -matricula: String
    -ano: int
    -marca: String
    -modelo: String
    -placa: String
    +CRUD()
}

class Contrato {
    +Contrato(id, tipo, agente, automovel, proprietarioVeiculo, pedido)
    +Contrato()
    -id                   : int
    -duracao              : Enum(12, 24, 36, 48)
    -tipo                 : Enum("Seguro", "Consórcio")
    -agente               : Agente
    -automovel            : Automovel
    -proprietarioVeiculo  : Usuario
    -pedido               : Pedido
    +registrarAutomovel() : void
    +contratoDeCompra()   : Boolean
    +aprovarContrato()    : Boolean
    +CRUD()
}

Cliente "1" -- "*" Pedido
Agente "1" -- "*" Pedido
Pedido "1" -- "1" Automovel
Contrato "1" -- "1" Pedido
Contrato "1" -- "1" Agente
Contrato "1" -- "1" Automovel

@enduml
